--- a/PCGrid/CMakeLists.txt
+++ b/PCGrid/CMakeLists.txt
@@ -44,11 +44,11 @@ add_subdirectory(third_party/libLAS)
 
 # Collect all source files
 set(SOURCES
+    src/main.cpp
     src/Las2PowerLine.cpp
     src/LasFileIo.cpp
     src/PCGrid.cpp
     src/PointCloutFeature.cpp
-    src/PowerLineProcessor.cpp
 )
 
 # Collect all header files
@@ -57,19 +57,12 @@ set(HEADERS
     src/PCGrid.h
     src/LasFileIo.h
     src/PointCloutFeature.h
-    src/nanoflann.hpp
-    src/ProcessorConfig.h
-    src/PowerLineProcessor.h
+    src/Las2PowerLine.h
+    src/nanoflann/nanoflann.hpp
 )
 
 # Create executable
 add_executable(Las2PowerLine ${SOURCES} ${HEADERS})
-
-# Define debug/release macros for the target.
-# - For single-config generators (Makefile/Ninja) CMAKE_BUILD_TYPE is honoured.
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_definitions(Las2PowerLine PRIVATE MYPROJECT_DEBUG)
-endif()
 
 # Link libraries
 target_link_libraries(Las2PowerLine PRIVATE las)
